--- a/Notes.html
+++ b/Notes.html
@@ -43,6 +43,9 @@ function copy(dest, source) {
 <br>
 
 <div class="row">
+<h2>Expository & Notes:
+<P align="right"> a href="index.html">[back to homepage]</a>
+	
 <div class="col-sm-7">
 <h2>Expository & Notes: <span style="font-family:STFangsong; font-size:20pt">
 </div>
