--- a/Notes.html
+++ b/Notes.html
@@ -44,7 +44,7 @@ function copy(dest, source) {
 
 <div class="row">
 <h2>Expository & Notes:
-<P align="right"> a href="index.html">[back to homepage]</a>
+<p> align="right"> a href="index.html">[back to homepage]</a></p>
 	
 <div class="col-sm-7">
 <h2>Expository & Notes: <span style="font-family:STFangsong; font-size:20pt">
