--- a/Notes.html
+++ b/Notes.html
@@ -43,8 +43,7 @@ function copy(dest, source) {
 <br>
 
 <div class="row">
-<h2>Expository & Notes:
-<p> align="right"> a href="index.html">[back to homepage]</a></p>
+<h2>Expository & Notes: <p align="right"> a href="index.html">[back to homepage]</a></p>
 	
 <div class="col-sm-7">
 <h2>Expository & Notes: <span style="font-family:STFangsong; font-size:20pt">
