--- a/Notes.html
+++ b/Notes.html
@@ -44,8 +44,9 @@ function copy(dest, source) {
 
 <div class="row">
 <h2 style="text-align:left;float:left;">Expository & Notes:</h2> 
-<h3 style="text-align:right;float:right;"><a href="index.html">[back to homepage]</a></h3> 
-	
+<h3 style="text-align:right;float:right; font-size:10pt"><a href="index.html">[back to homepage]</a></h3> 
+
+<!--
 <div class="col-sm-7">
 <h2>Expository & Notes: <span style="font-family:STFangsong; font-size:20pt">
 </div>
