--- a/Notes.html
+++ b/Notes.html
@@ -44,7 +44,7 @@ function copy(dest, source) {
 
 <div class="row">
 <h2 style="text-align:left;float:left;">Expository & Notes:</h2> 
-<h3 style="text-align:right;float:right; font-size:18pt"><a href="index.html">[back to homepage]</a></h3> 
+<h4 style="text-align:right;float:right;"><a href="index.html">[back to homepage]</a></h4> 
 
 <!--
 <div class="col-sm-7">
