--- a/Notes.html
+++ b/Notes.html
@@ -39,10 +39,16 @@ function copy(dest, source) {
 }
 </script>
 
+.test {
+  height: 350px;
+  display: flex;
+  align-items: flex-end;
+}
+	
 <div class="container">
 <br>
 
-<div class="row">
+<div class="test">
 <h2 style="text-align:left;float:left;">Expository & Notes:</h2> 
 <h4 style="text-align:right;float:right;"><a href="index.html">[back to homepage]</a></h4> 
 
