--- a/Notes.html
+++ b/Notes.html
@@ -42,13 +42,7 @@ function copy(dest, source) {
 <div class="container">
 <br>
 
-<div class="test">
-
-.test {
-  height: 350px;
-  display: flex;
-  align-items: flex-end;
-}
+<div class="flex-container"; align-items: flex-end>
 	
 <h2 style="text-align:left;float:left;">Expository & Notes:</h2> 
 <h4 style="text-align:right;float:right;"><a href="index.html">[back to homepage]</a></h4> 
