--- a/Notes.html
+++ b/Notes.html
@@ -42,11 +42,9 @@ function copy(dest, source) {
 <div class="container">
 <br>
 
-<div class="flex-container"; align-items: flex-end>
-<div>
+<div class="row">
 <h2 style="text-align:left;float:left;">Expository & Notes:</h2> 
 <h4 style="text-align:right;float:right;"><a href="index.html">[back to homepage]</a></h4> 
-<div>
 <!--
 <div class="col-sm-7">
 <h2>Expository & Notes: <span style="font-family:STFangsong; font-size:20pt">
