--- a/Notes.html
+++ b/Notes.html
@@ -43,8 +43,10 @@ function copy(dest, source) {
 <br>
 
 <div class="row">
-<h2 style="text-align:left;float:left;">Expository & Notes:</h2> 
-<h4 style="text-align:right;float:right;"><a href="index.html">[back to homepage]</a></h4> 
+<h2>Expository & Notes:</h2> 
+<br>
+<br>
+<p><a href="index.html">[back to homepage]</a></h4> 
 <!--
 <div class="col-sm-7">
 <h2>Expository & Notes: <span style="font-family:STFangsong; font-size:20pt">
