--- a/Notes.html
+++ b/Notes.html
@@ -40,11 +40,7 @@ function copy(dest, source) {
 </script>
 	
 <div class="container">
-<br>
-
-<div class="row">
 <h2>Expository & Notes:</h2> 
-<br>
 <br>
 <p><a href="index.html">[back to homepage]</a></h4> 
 <!--
@@ -59,8 +55,7 @@ function copy(dest, source) {
 <!-- <div class="col-sm-2">
 <br><br><br>
 <img class="img-responsive" style="max-height:300px;" src="images/seal.png" />
-</div> -->
-</div>
+</div> --
 <hr>
 <ul>
     <li><a https://www.birs.ca/events/2024/5-day-workshops/24w5169>Malliavin Calculus</a>.
