--- a/Notes.html
+++ b/Notes.html
@@ -40,9 +40,7 @@ function copy(dest, source) {
 </script>
 	
 <div class="container">
-<h2>Expository & Notes:</h2> 
-<br>
-<p><a href="index.html">[back to homepage]</a></h4> 
+<h2 align="left">Expository & Notes:</h2> <p align="right"><a href="index.html">[back to homepage]</a></h4> 
 <!--
 <div class="col-sm-7">
 <h2>Expository & Notes: <span style="font-family:STFangsong; font-size:20pt">
