--- a/Notes.html
+++ b/Notes.html
@@ -40,7 +40,7 @@ function copy(dest, source) {
 </script>
 	
 <div class="container">
-<p align="left"; font-size:26pt"><b>Expository & Notes:</b><p> <p align="right"><a href="index.html">[back to homepage]</a></p> 
+<h2 align="left">Expository & Notes:<h2> <h3 align="right"><a href="index.html">[back to homepage]</a></h3> 
 <!--
 <div class="col-sm-7">
 <h2>Expository & Notes: <span style="font-family:STFangsong; font-size:20pt">
