--- a/Notes.html
+++ b/Notes.html
@@ -40,7 +40,10 @@ function copy(dest, source) {
 </script>
 	
 <div class="container">
-<h2 align="left">Expository & Notes:<h2> <h3 align="right"><a href="index.html">[homepage]</a></h3> 
+<div class="row">
+<h2 align="left">Expository & Notes:<h2> 
+<h3 align="right"><a href="index.html">[homepage]</a></h3> 
+<div>
 <!--
 <div class="col-sm-7">
 <h2>Expository & Notes: <span style="font-family:STFangsong; font-size:20pt">
