--- a/Notes.html
+++ b/Notes.html
@@ -40,10 +40,8 @@ function copy(dest, source) {
 </script>
 	
 <div class="container">
-<div class="row">
-<h2 align="left">Expository & Notes:<h2> 
-<h3 align="right"><a href="index.html">[homepage]</a></h3> 
-<div>
+<h2 style="text-align:left;float:left;">Expository & Notes:<h2> 
+<h3 style="text-align:right;float:right;">[homepage]</a></h3> 
 <!--
 <div class="col-sm-7">
 <h2>Expository & Notes: <span style="font-family:STFangsong; font-size:20pt">
