--- a/Notes.html
+++ b/Notes.html
@@ -41,7 +41,7 @@ function copy(dest, source) {
 	
 <div class="container">
 <h2 style="text-align:left;float:left;">Expository & Notes:<h2> 
-<h3 style="text-align:right;float:right;"><a index.html>[homepage]</a></h3> 
+<h3 style="text-align:right;float:right;"><a href="index.html">[homepage]</a></h3> 
 <!--
 <div class="col-sm-7">
 <h2>Expository & Notes: <span style="font-family:STFangsong; font-size:20pt">
