--- a/Notes.html
+++ b/Notes.html
@@ -40,8 +40,8 @@ function copy(dest, source) {
 </script>
 	
 <div class="container">
-<div class="row>
-<h2 style="text-align:left;float:left;">Expository & Notes:<h2> 
+<div class="row">
+<h2 style="text-align:left;float:left;">Expository & Notes:</h2> 
 <h3 style="text-align:right;float:right;"><a href="index.html">[homepage]</a></h3> 
 <div>
 <!--
