--- a/Notes.html
+++ b/Notes.html
@@ -40,11 +40,12 @@ function copy(dest, source) {
 </script>
 	
 <div class="container">
+<br>
+
 <div class="row">
 <h2 style="text-align:left;float:left;">Expository & Notes:</h2> 
-<h3 style="text-align:right;float:right;"><a href="index.html">[homepage]</a></h3> 
-<div>
-<br>
+<h3 style="text-align:right;float:right;"><a href="index.html">[back to homepage]</a></h3> 
+
 <!--
 <div class="col-sm-7">
 <h2>Expository & Notes: <span style="font-family:STFangsong; font-size:20pt">
@@ -58,6 +59,7 @@ function copy(dest, source) {
 <br><br><br>
 <img class="img-responsive" style="max-height:300px;" src="images/seal.png" />
 </div> -->
+<div>
 <hr>
 <ul>
     <li><a https://www.birs.ca/events/2024/5-day-workshops/24w5169>Malliavin Calculus</a>.
