--- a/Notes.html
+++ b/Notes.html
@@ -62,7 +62,7 @@ function copy(dest, source) {
 <div>
 <hr>
 <ul>
-    <li><a https://www.birs.ca/events/2024/5-day-workshops/24w5169>Malliavin Calculus</a>.
+    <li><a https://www.birs.ca/events/2024/5-day-workshops/24w5169>MMMMalliavin Calculus</a>.
     </li>
 </ul>
 <!--<a href="chinese.html">中文版</a>-->
