--- a/Notes.html
+++ b/Notes.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <title>Notes & Expository Writing</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -13,7 +12,6 @@
   	<link rel="stylesheet" type="text/css" media="screen,print" href="css/style.css" />
 	<link href="css/bootstrap.min.css" rel="stylesheet" media="screen" />
 	<link rel="icon" type="image/png" href="images/CourantLogo.png">
-
 </head>
 	
 <script>
@@ -38,7 +36,6 @@ function copy(dest, source) {
   dest.blur();
 }
 </script>
-	
 <div class="container">
 <br>
 
@@ -53,23 +50,20 @@ function copy(dest, source) {
 <div class="col-sm-5">
 <div class="clearfix visible-xs-block"></div>
 <h4> <a href="index.html">[back to homepage]</a> <span style="font-family:STFangsong; font-size:10pt">
-
 </div>
 <!-- <div class="col-sm-2">
 <br><br><br>
 <img class="img-responsive" style="max-height:300px;" src="images/seal.png" />
 </div> -->
-<div>
+</div>
 <hr>
 <ul>
-    <li><a https://www.birs.ca/events/2024/5-day-workshops/24w5169>MMMMalliavin Calculus</a>.
+    <li><a https://www.birs.ca/events/2024/5-day-workshops/24w5169>Malliavin Calculus</a>.
     </li>
 </ul>
 <!--<a href="chinese.html">中文版</a>-->
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 </div>
-
 <br>
 <br>
 </body>
