--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@ function copy(dest, source) {
 
 <div class="row">
 <div class="col-sm-5">
-<a href="images/Untitled.png">
-<img class="img-responsive" style="max-height:400px;" src="images/Untitled.png"/>
+<a href="images/SpinasePic.png">
+<img class="img-responsive" style="max-height:400px;" src="images/SpinasePic.png"/>
 </a>
 </div>
 
