--- a/Notes.html
+++ b/Notes.html
@@ -40,17 +40,19 @@ function copy(dest, source) {
 <br>
 
 <div class="row">
+<!--
 <h2 style="text-align:left;float:left;">Expository & Notes:</h2> 
 <h3 style="text-align:right;float:right;"><a href="index.html">[homepage]</a></h3> 
+-->
 
-<!--
 <div class="col-sm-7">
 <h2>Expository & Notes: <span style="font-family:STFangsong; font-size:20pt">
 </div>
 <div class="col-sm-5">
 <div class="clearfix visible-xs-block"></div>
-<h4> <a href="index.html">[back to homepage]</a> <span style="font-family:STFangsong; font-size:10pt">
+<h4> <a href="index.html">[homepage]</a> <span style="font-family:STFangsong; font-size:10pt">
 </div>
+	
 <!-- <div class="col-sm-2">
 <br><br><br>
 <img class="img-responsive" style="max-height:300px;" src="images/seal.png" />
