--- a/Notes.html
+++ b/Notes.html
@@ -50,7 +50,7 @@ function copy(dest, source) {
 </div>
 <div class="col-sm-5">
 <div class="clearfix visible-xs-block"></div>
-<h3 align="right"> <a href="index.html">[homepage]</a> <span style="font-family:STFangsong; font-size:14pt"></h3> 
+<h3 align="left"> <a href="index.html">[homepage]</a> <span style="font-family:STFangsong; font-size:14pt"></h3> 
 </div>
 	
 <!-- <div class="col-sm-2">
