--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ function copy(dest, source) {
 <br>
 <br>
 <b>Email</b>: jasper.shogren-knaak [at] cims.nyu.edu <br>
-<b>Office</b>: TBD <br>
+<b>Office</b>:<a href="https://maps.app.goo.gl/r65XfHUV8xWtXBbq9">WWH</a> 504 <br>
 <br>
 
 </div>
