--- a/index.html
+++ b/index.html
@@ -117,11 +117,12 @@ function copy(dest, source) {
 I am a first-year graduate student in the <a href="https://math.nyu.edu/dynamic/">Department of Mathematics</a> at the <!--<a href="https://cims.nyu.edu/dynamic/">-->Courant Institute. <!--I am very fortunate to be advised by <a href="https://www.scottnarmstrong.com">Scott Armstrong</a> and <a href="https://cims.nyu.edu/~bauerschmidt/index.html">Roland Bauerschmidt</a>. -->Prior to Courant, I did my undergraduate studies at <!--<a href="https://www.stanford.edu">-->Stanford University.
 <br>
 <br>
-My research focuses on probability theory and partial differential equations, in particular in their applications to statistical mechanics. One particular area of interest is problems that require an understanding of many length scales.
+I am mainly interested in probability and PDEs, specifically their connections to statistical mechanics. <!--I particularly  like problems that are multiscale and/or dynamical in nature.-->
 <br>
+<!--	
 <br>
 Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (current services that i want to show go here)
-<br>	
+<br> -->
 </p>
 
 <hr>
