--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
 
             document.write(list_entry)
 
-            paper_count += 1
+            talk_count += 1
         }
 
         document.write("<h2>Talks</h2>")
