--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
         
 </script>
 
-	<span style="font-family: Lato; font-size:17px;">A collection of notes and other expository writing can be found <a href="Notes.html">here</a>.</span>
+	<!--<span style="font-family: Lato; font-size:17px;">A collection of notes and other expository writing can be found <a href="Notes.html">here</a>.</span>-->
 <hr>
 
 <script>
