--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
         document.write("<ul>")
 
         add_talk("Title",
-            "location 1, location 2",
+            "location 1 location 2",
             "Abstract",
             "https://arxiv.org/abs/1905.03391",
             "https://www.aimsciences.org/article/doi/10.3934/cpaa.2020159"
