--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
             list_entry += "<br>" + locations + ".<br>"
 
             if (abstract != null) {
-                list_entry += "<div id=\"abstract" + talk_count + "\" style=\"display:none\">" + abstract + "</div>"
-                <!--list_entry += "<a href=\"javascript:copy(div" + talk_count + ",talk_abstract" + talk_count + ")\" class = \"button\" >[abstract]</a>"-->
+                list_entry += "<div id=\"talk_abstract" + talk_count + "\" style=\"display:none\">" + abstract + "</div>"
+                list_entry += "<a href=\"javascript:copy(div" + talk_count + ",talk_abstract" + talk_count + ")\" class = \"button\" >[abstract]</a>"
             }
 
             if (slides != null)
