--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ function copy(dest, source) {
 
 
 <p>
-<b>PAGE NOT COMPLETE OR ACCURATE YET.</b>
+<b>PAGE NOT COMPLETE OR ACCURATE YET</b>
 <br>
 <br>
 I am a first-year graduate student in the <a href="https://math.nyu.edu/dynamic/">Department of Mathematics</a> at the <!--<a href="https://cims.nyu.edu/dynamic/">-->Courant Institute. <!--I am very fortunate to be advised by <a href="https://www.scottnarmstrong.com">Scott Armstrong</a> and <a href="https://cims.nyu.edu/~bauerschmidt/index.html">Roland Bauerschmidt</a>. -->Prior to Courant, I did my undergraduate studies at <!--<a href="https://www.stanford.edu">-->Stanford University.
@@ -204,7 +204,7 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
 <script>
         talk_count = 0
 
-        function add_talk(title, locations, abstract, slides, recording) {
+        function add_talk(title, locations, talk_abstract, slides, recording) {
             list_entry = "<li style=\"font-size:18px\">"
             if (title != null)
                 <!--list_entry += "<a href=\"" + link + "\">"-->
@@ -213,8 +213,8 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
                 list_entry += "</a>"
             list_entry += "<br>" + locations + ".<br>"
 
-            if (abstract != null) {
-                list_entry += "<div id=\"talk_abstract" + talk_count + "\" style=\"display:none\">" + abstract + "</div>"
+            if (talk_abstract != null) {
+                list_entry += "<div id=\"talk_abstract" + talk_count + "\" style=\"display:none\">" + talk_abstract + "</div>"
                 list_entry += "<a href=\"javascript:copy(div" + talk_count + ",talk_abstract" + talk_count + ")\" class = \"button\" >[abstract]</a>"
             }
 
