--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
 
         add_talk("Title",
             "location 1 location 2",
-            "talk_Abstract",
+            "we do this and then we do that",
             "https://arxiv.org/abs/1905.03391",
             "https://www.aimsciences.org/article/doi/10.3934/cpaa.2020159"
         )
