--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
 
 	<!--<span style="font-family: Lato; font-size:17px;">A collection of notes and other expository writing can be found <a href="Notes.html">here</a>.</span>-->
 <hr>
-<!--
+
 <script>
         talk_count = 0
 
@@ -215,7 +215,7 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
 
             if (talk_abstract != null) {
                 list_entry += "<div id=\"talk_abstract" + talk_count + "\" style=\"display:none\">" + talk_abstract + "</div>"
-                list_entry += "<a href=\"javascript:copy(div" + talk_count + ",talk_abstract" + talk_count + ")\" class = \"button\" >[abstract]</a>"
+                list_entry += "<a href=\"javascript:copy(talk_div" + talk_count + ",talk_abstract" + talk_count + ")\" class = \"button\" >[abstract]</a>"
             }
 
             if (slides != null)
@@ -246,7 +246,6 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
         document.write("</ul>")
         
 </script>
--->
 <hr>
 	
 <!--
