--- a/index.html
+++ b/index.html
@@ -214,8 +214,10 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
             list_entry += "<br>" + locations + ".<br>"
 
             if (talk_abstract != null) {
-                <!--list_entry += "<div id=\"talk_abstract" + talk_count + "\" style=\"display:none\">" + talk_abstract + "</div>"
-                list_entry += "<a href=\"javascript:copy(talk_div" + talk_count + ",talk_abstract" + talk_count + ")\" class = \"button\" >[abstract]</a>"-->
+                <!--
+		list_entry += "<div id=\"talk_abstract" + talk_count + "\" style=\"display:none\">" + talk_abstract + "</div>"
+                list_entry += "<a href=\"javascript:copy(talk_div" + talk_count + ",talk_abstract" + talk_count + ")\" class = \"button\" >[abstract]</a>"
+		-->
             }
 
             if (slides != null)
