--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
 <hr>
 
 
-
+<!--
 <script>
         paper_count = 0
 
@@ -197,6 +197,7 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
         document.write("</ul>")
         
 </script>
+-->
 
 	<!--<span style="font-family: Lato; font-size:17px;">A collection of notes and other expository writing can be found <a href="Notes.html">here</a>.</span>-->
 <hr>
@@ -215,7 +216,7 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
 
             if (talk_abstract != null) {
 		list_entry += "<div id=\"talk_abstract" + talk_count + "\" style=\"display:none\">" + talk_abstract + "</div>"
-                <!--list_entry += "<a href=\"javascript:copy(talk_div" + talk_count + ",talk_abstract" + talk_count + ")\" class = \"button\" >[abstract]</a>"-->
+                list_entry += "<a href=\"javascript:copy(div" + talk_count + ",talk_abstract" + talk_count + ")\" class = \"button\" >[abstract]</a>"
             }
 
             if (slides != null)
