--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
                 list_entry += " <a href=\"" + slides + "\" class = \"button\" >[slides]</a>"
 
             if (recording != null)
-                list_entry += " <a href=\"" + recording + "\" class = \"button\" >[talk]</a>"
+                list_entry += " <a href=\"" + recording + "\" class = \"button\" >[recording]</a>"
 
             list_entry += "<br>"
 
