--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
 <script>
         talk_count = 0
 
-        function add_talk(title, locations, slides, recording) {
+        function add_talk(title, locations, talk_abstract, slides, recording) {
             list_entry = "<li style=\"font-size:18px\">"
             if (title != null)
                 <!--list_entry += "<a href=\"" + link + "\">"-->
@@ -210,7 +210,11 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
             if (locations != null)
                 list_entry += "</a>"
             list_entry += "<br>" + locations + ".<br>"
-
+		
+		if (talk_abstract != null) {
+                list_entry += "<div id=\"talk_abstract" + talk_count + "\" style=\"display:none\">" + talk_abstract + "</div>"
+                list_entry += "<a href=\"javascript:copy(div" + talk_count + ",talk_abstract" + talk_count + ")\" class = \"button\" >[abstract]</a>"
+            }
             if (slides != null)
                 list_entry += " <a href=\"" + slides + "\" class = \"button\" >[slides]</a>"
 
