--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
 
         add_talk("Title",
             "location 1 location 2",
+	    "we did this we did that",
             "https://arxiv.org/abs/1905.03391",
             "https://www.aimsciences.org/article/doi/10.3934/cpaa.2020159"
         )
