--- a/index.html
+++ b/index.html
@@ -143,8 +143,9 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
                     <b>${title}</b><br>${authors}.<br>${conference}.<br>
                     ${bib ? `<div id="bib${paper_count}" style="display:none">${bib}</div>
                     <a href="javascript:copy(div${paper_count}, bib${paper_count})" class="button">[bib]</a>` : ''}
-                    ${abstract ? `<div id="abstract${paper_count}" style="display:none">${abstract}</div>
-                    <a href="javascript:copy(div${paper_count}, abstract${paper_count})" class="button">[abstract]</a>` : ''}
+                    ${abstract ? `
+        <div id="abstract${paper_count}" style="display:none">${abstract}</div>
+        <a href="javascript:copy(document.getElementById('div${paper_count}'), document.getElementById('abstract${paper_count}'))" class="button">[abstract]</a>` : ''}
                     ${arxiv_link ? `<a href="${arxiv_link}" class="button">[arXiv]</a>` : ''}
                     ${journal_link ? `<a href="${journal_link}" class="button">[journal]</a>` : ''}
                     ${data ? `<a href="${data}" class="button">[data]</a>` : ''}
@@ -165,8 +166,9 @@ Currently I organize <a href="https://math.nyu.edu/dynamic/">whatever</a> (curre
             const listEntry = `
                 <li style="font-size:18px">
                     <b>${title}</b><br>${locations}.<br>
-                    ${talk_abstract ? `<div id="talk_abstract${talk_count}" style="display:none">${talk_abstract}</div>
-                    <a href="javascript:copy(div${talk_count}, talk_abstract${talk_count})" class="button">[abstract]</a>` : ''}
+                    ${talk_abstract ? `
+        <div id="talk_abstract${talk_count}" style="display:none">${talk_abstract}</div>
+        <a href="javascript:copy(document.getElementById('div${talk_count}'), document.getElementById('talk_abstract${talk_count}'))" class="button">[abstract]</a>` : ''}
                     ${slides ? `<a href="${slides}" class="button">[slides]</a>` : ''}
                     ${recording ? `<a href="${recording}" class="button">[recording]</a>` : ''}
                 </li>
